sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:7: error: not found: value i
    base = primeHole+i
                     ^