sort.baseball.SelectBaseball.scala.code
override def run() {
  var n:Int = getNombreBases()
  val primeHole:Int = getTrouBase()
  var base:Int = primeHole
  
//  for (i <- 0 to n-1) {
    base = primeHole+i
    chercheJoueur(base, n)
    
//  }
  

  
}


def chercheJoueur(couleur:Int, n:Int) {
  
  var baseTestee:Int = (couleur+1)%n
  
  while ((getCouleurJoueur(baseTestee,0)!=couleur) && (getCouleurJoueur(baseTestee,1)!=couleur)) {
    deplace(baseTestee,0)
    baseTestee = (baseTestee+1)%n
  }
  
  if (getCouleurJoueur(baseTestee,0)==couleur) {
    deplace(baseTestee, 1)
  }
  
  else {
    deplace(baseTestee, 0)
  }
  
  
}